--- a/PROG2/.classpath
+++ b/PROG2/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/Users/at1kado/Dropbox/2 Semester/Programmierung 2/mockito-all-1.9.5.jar"/>
 	<classpathentry kind="con" path="org.testng.TESTNG_CONTAINER"/>
+	<classpathentry kind="lib" path="C:/Users/at1kado/Dropbox/2 Semester/Programmierung 2/com.google.guava_1.6.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
